--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Literary Mutilator</title>
+		<link rel="stylesheet" href="/styles/style.css">
+		<script rel="script" src="/js/script.js"></script>
 	</head>
 	<body>
 		<h2>Literary Mutilator</h2>
@@ -14,9 +16,6 @@
 		</p>
 		<p>
 			Communication is not possible. The shuttle has no power. Using the gravitational pull of a star to slingshot back in time? We are going to Starbase Montgomery for Engineering consultations prompted by minor read-out anomalies. Probes have recorded unusual levels of geological activity in all five planetary systems. Assemble a team. Look at records of the Drema quadrant. Would these scans detect artificial transmissions as well as natural signals?
-		</p>
-		<p>
-			Resistance is futile.
 		</p>
 	</body>
 </html>
