--- a/index.html
+++ b/index.html
@@ -3,19 +3,49 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Literary Mutilator</title>
+		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" >
 		<link rel="stylesheet" href="/styles/style.css">
 		<script rel="script" src="/js/script.js"></script>
+		<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 	</head>
 	<body>
 		<h2>Literary Mutilator</h2>
-		<p>
-			These are the voyages of the Starship Enterprise. Its continuing mission, to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no one has gone before. We need to neutralize the homing signal. Each unit has total environmental control, gravity, temperature, atmosphere, light, in a protective field. Sensors show energy readings in your area. We had a forced chamber explosion in the resonator coil. Field strength has increased by 3,000 percent.
-		</p>
-		<p>
-			Now what are the possibilities of warp drive? Cmdr Riker's nervous system has been invaded by an unknown microorganism. The organisms fuse to the nerve, intertwining at the molecular level. That's why the transporter's biofilters couldn't extract it. The vertex waves show a K-complex corresponding to an REM state. The engineering section's critical. Destruction is imminent. Their robes contain ultritium, highly explosive, virtually undetectable by your transporter.
-		</p>
-		<p>
-			Communication is not possible. The shuttle has no power. Using the gravitational pull of a star to slingshot back in time? We are going to Starbase Montgomery for Engineering consultations prompted by minor read-out anomalies. Probes have recorded unusual levels of geological activity in all five planetary systems. Assemble a team. Look at records of the Drema quadrant. Would these scans detect artificial transmissions as well as natural signals?
-		</p>
+
+		<section class="py-5 font">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-4">
+						<div class="card mb-4 body">
+							<div class="card-body">
+								<h5 class="card-title">Change Text Color/Font</h5>
+								<p id="voyages">These are the voyages of the Starship Enterprise. Its continuing mission, to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no one has gone before. We need to neutralize the homing signal. Each unit has total environmental control, gravity, temperature, atmosphere, light, in a protective field. Sensors show energy readings in your area. We had a forced chamber explosion in the resonator coil. Field strength has increased by 3,000 percent.</p>
+								<button class="btn btn-primary" type="submit" onclick="turnGreen()">Change Color</button><hr />
+								<button class="btn btn-primary" type="submit" onclick="playfairFont()">Change Font</button>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="card mb-4">
+							<div class="card-body">
+								<h5 class="card-title">Find & Replace/Highlight Word</h5>
+								<p id="possibilities">Now what are the possibilities of warp drive? Cmdr Riker's nervous system has been invaded by an unknown microorganism. The organisms fuse to the nerve, intertwining at the molecular level. That's why the transporter's biofilters couldn't extract it. The vertex waves show a K-complex corresponding to an REM state. The engineering section's critical. Destruction is imminent. Their robes contain ultritium, highly explosive, virtually undetectable by your transporter.</p>
+							<button class="btn btn-primary" type="submit" onclick="turnGreen()">Change Color</button><hr />
+							<button class="btn btn-primary" type="submit" onclick="turnFont()">Change Font</button>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="card mb-4">
+							<div class="card-body">
+								<h5 class="card-title">ROT13 Encryption</h5>
+								<p id="communication">Communication is not possible. The shuttle has no power. Using the gravitational pull of a star to slingshot back in time? We are going to Starbase Montgomery for Engineering consultations prompted by minor read-out anomalies. Probes have recorded unusual levels of geological activity in all five planetary systems. Assemble a team. Look at records of the Drema quadrant. Would these scans detect artificial transmissions as well as natural signals?</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
 	</body>
 </html>
