--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 		<meta charset="UTF-8">
 		<title>Literary Mutilator</title>
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" >
-		<link rel="stylesheet" href="/styles/style.css">
-		<script rel="script" src="/js/script.js"></script>
-		<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+		<link rel="stylesheet" href="./styles/style.css">
+		<script rel="script" src="./js/script.js"></script>
 	</head>
 	<body>
 		<h2>Literary Mutilator</h2>
@@ -20,7 +19,7 @@
 								<h5 class="card-title">Change Text Color/Font</h5>
 								<p id="voyages">These are the voyages of the Starship Enterprise. Its continuing mission, to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no one has gone before. We need to neutralize the homing signal. Each unit has total environmental control, gravity, temperature, atmosphere, light, in a protective field. Sensors show energy readings in your area. We had a forced chamber explosion in the resonator coil. Field strength has increased by 3,000 percent.</p>
 								<button class="btn btn-primary" type="submit" onclick="turnGreen()">Change Color</button><hr />
-								<button class="btn btn-primary" type="submit" onclick="playfairFont()">Change Font</button>
+								<button class="btn btn-primary" type="submit" onclick="changeFont()">Change Font</button>
 							</div>
 						</div>
 					</div>
